--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,6 @@
   <title>Test</title>
 </head>
 <body>
-  <script src="./build/Release/jscpptest.js"></script>
+  <script src="./build/Release/test.js"></script>
 </body>
 </html>
